// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createScenario Reducer addAction must push an action in the then field 1`] = `
Object {
  "actions": Array [
    Object {
      "id": 33,
      "options": Object {
        "lat": -123,
        "lng": 13,
      },
    },
  ],
  "conditions": Array [],
  "name": "",
}
`;

exports[`createScenario Reducer addCondition must push an condition in the if field 1`] = `
Object {
  "actions": Array [],
  "conditions": Array [
    Object {
      "id": 35,
      "options": Object {
        "lat": -123,
        "lng": 13,
      },
    },
  ],
  "name": "",
}
`;

exports[`createScenario Reducer addName must add name to the name field 1`] = `
Object {
  "actions": Array [],
  "conditions": Array [],
  "name": "toto's scenario",
}
`;

exports[`createScenario Reducer clear must reset to initialState 1`] = `
Object {
  "actions": Array [],
  "conditions": Array [],
  "name": "",
}
`;
